report page loading data css

--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -7,6 +7,8 @@
   </ul>
 </div>
 <div class="cs-action-bar-bg">
+    <div class="masking" ng-if='loading'></div>
+    <md-progress-circular md-mode="indeterminate" ng-if='loading'></md-progress-circular>
     <h6>Advanced filters:</h6>
     <div class="cs-action-bar clearfix">
         <div class="left-con">
@@ -142,7 +144,7 @@
 
 <div class="table-box">
     <md-table-container resize>
-        <table md-table multiple ng-model="selected" md-progress="promise">
+        <table md-table multiple ng-model="selected">
             <thead md-head md-order="query.order" fix-head>
             <tr md-row>
                 <th md-column style="padding: 0 10px" class="row-action"><i class="icon-circle"></i></th>
