--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -499,7 +499,7 @@
                 <div class="col-xs-6 col-sm-4">
                         <h4>Contact</h4>
                         <span><a href="mailto:contact@newbidder.com"><i class="icon-envelope"></i>contact@newbidder.com</a></span><br>
-                        <span><a href="#"><i class="icon-skype icon-skype-font"></i>live:support_44609</a></span><br>
+                        <span><a href="#"><i class="icon-skype icon-skype-font"></i>support@newbidder.com</a></span><br>
                         <span><i class="icon-map-marker" style="font-size:13px;margin:0 10px 0 3px;"></i>6 raffles quay #16-01 Singapore</span>
                     </div>
                 <div class="col-xs-12 col-sm-4">
