--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -54,7 +54,7 @@
                 <img src="../assets/img/plan_3.jpg" ng-show="plans[3].id == id && payType == 0"/> -->
               </div>
               <p ng-show="payType == 0" style="color: rgb(102, 102, 102); text-align: center;" aria-hidden="false" class="">
-                Please contact the Skype: <b>live:support_44609</b>
+                Please contact the Skype: <b>support@newbidder.com</b>
                 <br> to open your account after payment
                 <br> Please send us your alipay account and newbidder account for refund.
                 <br> To: <b>finance@newbidder.com</b>
