修复列表数据多的问题

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -70,6 +70,7 @@
 <script src="../bower_components/angular-permission/dist/angular-permission.js"></script>
 <script src="../bower_components/qrcode/lib/qrcode.min.js"></script>
 <script src="../bower_components/angular-qr/angular-qr.min.js"></script>
+<script src="../bower_components/angular-vs-repeat/src/angular-vs-repeat.min.js"></script>
 
 <!-- App -->
 <script src="js/app.js"></script>
