--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -35,7 +35,7 @@
                         <a clipboard ng-click="copyCon()" text="emailCon"><b>Email</b>：<span ng-model="emailCon">support@newbidder.com</span></a>
                     </li>
                     <li class="support-li">
-                        <a clipboard ng-click="copyCon()" text="skypeCon"><b>Skype</b>：<span ng-model="skypeCon">live:support_44609</span></a>
+                        <a clipboard ng-click="copyCon()" text="skypeCon"><b>Skype</b>：<span ng-model="skypeCon">support@newbidder.com</span></a>
                     </li>
                     <li class="support-li">
                          <a clipboard ng-click="copyCon()" text="qqCon"><b>QQ group</b>：<span ng-model="qqCon">490922827</span></a>
