子账户不显示coupon code按钮

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -14,7 +14,7 @@
         <div class="setting">
           <a class="setting-link" ui-sref="setApp.profile"><i class="icon-s-03 fonts15"></i></a>
         </div>
-        <div class="coupon-btn">
+        <div class="coupon-btn" has-permission="setting.subscriptions.show" operation="show">
             <a href="javascript:;" ng-click="goCoupon()">
             <div class="coupon-btn-col">
             <span class="small-font">COUPON CODE</span><i class="coupon-icon"></i>
