NB-480 safari的最下面total部分问题解决~

--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -123,7 +123,7 @@
         </div>
     </div>
 </div>
-<div flex layout="column" class="cs-page-content report">
+<div flex class="cs-page-content report">
 
 <div class="breadcrumb-div">
 <div ng-if="filters.length > 0">
