--- a/Front/src/tpl/ts-report.html
+++ b/Front/src/tpl/ts-report.html
@@ -74,7 +74,7 @@
 </div>
 </div>
 
-<div flex layout="column" class="cs-page-content report">
+<div flex class="cs-page-content report">
     <div class="table-box">
     <md-table-container>
         <table md-table multiple ng-model="selected" md-progress="promise">
