--- a/Front/src/tpl/conversion.html
+++ b/Front/src/tpl/conversion.html
@@ -73,7 +73,7 @@
 </div>
 </div>
 
-<div flex layout="column" class="cs-page-content report">
+<div flex class="cs-page-content report">
            <div class="table-box">
 
     <md-table-container resize>
