--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -60,7 +60,7 @@
         <button class="join-btn" type="button">Join us</button>
         </a>
     </div>
-    <a class="smoothscroll" href="#pricing">
+    <a href="#pricing">
         <div class="scroll-down"></div>
     </a>
 </header>
@@ -108,7 +108,7 @@
                             <li><i class="icon-ok"></i>Skype Support 24/7</li>
                             <li><i class="icon-ok"></i>6 month data retention</li>
                             <li><i class="icon-ok"></i>5 custom tracking domains</li>
-                            <li><i class="icon-ok"></i>1 additional users</li>
+                            <li><i class="icon-ok"></i>1 additional user</li>
                             <li><i class="icon-ok"></i>10%volume discount</li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
