--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="title">
-        <h1 class="heading animated fadeInLeft">More Better for Affiliates</h1>
+        <h1 class="heading animated fadeInLeft">Best Solution for Affiliates</h1>
         <a href="http://panel.newbidder.com/#/access/signin">
         <button class="join-btn" type="button">Join us</button>
         </a>
