--- a/Front/src/tpl/ts-offer-report.html
+++ b/Front/src/tpl/ts-offer-report.html
@@ -59,7 +59,7 @@
             <!--<i class="search-btn"></i>-->
         </div>
         <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn apply-change-btn" ng-click="applySearch()" translate>Search</md-button>
-        <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn apply-change-btn" ng-click="" translate>Cart</md-button>
+        <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn apply-change-btn" ng-disabled="!selected.length" ng-click="showSelect()" translate>Cart</md-button>
       </div>
   </div>
 </div>
