--- a/Front/src/tpl/ts-reference-dialog.html
+++ b/Front/src/tpl/ts-reference-dialog.html
@@ -21,32 +21,55 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">TS<span class="star-icon">*</span>:</label>
+                <label class="col-sm-3 control-label">Traffic Source<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
-                    <md-select name="ts" class="form-control form-control-none" ng-model="formData.tsId" ng-change="tsChanged(formData.tsId)" required>
+                    <md-select name="ts" class="form-control form-control-none"
+                      ng-model="formData.trustedTrafficSourceId"
+                      ng-change="tsChanged(formData.trustedTrafficSourceId)"
+                      required
+                    >
                         <md-option value=""></md-option>
-                        <md-option value="{{thirdTraffic.id}}" ng-repeat="thirdTraffic in thirdTraffics">{{thirdTraffic.name}}</md-option>
+                        <md-option
+                          value="{{templateTrafficSource.id}}"
+                          ng-repeat="templateTrafficSource in templateTrafficSources track by templateTrafficSource.id"
+                        >
+                          {{templateTrafficSource.name}}
+                        </md-option>
                     </md-select>
                     <span class="text-danger" ng-show="(editForm.ts.$touched || editForm.$submitted) && editForm.ts.$invalid">
                         <span ng-show="editForm.ts.$error.required">Traffic source is required.</span>
                     </span>
                 </div>
             </div>
-            <!-- <div class="form-group">
-                <label class="col-sm-3 control-label">API:</label>
+            <div class="form-group" ng-show="templateTrafficSourceObj.apiMode !== 2 && templateTrafficSourceObj">
+                <label class="col-sm-3 control-label">{{(templateTrafficSourceObj && templateTrafficSourceObj.apiParams) ? templateTrafficSourceObj.apiParams.token : ''}}<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" disabled ng-model="formData.api"/>
-                </div>
-            </div> -->
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Token<span class="star-icon">*</span>:</label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" ng-model="formData.token" required name="token"/>
+                    <input type="text" class="form-control" ng-model="formData.token" ng-required="templateTrafficSourceObj.apiMode == 1 || templateTrafficSourceObj.apiMode == 3" name="token"/>
                     <span class="text-danger" ng-show="(editForm.token.$touched || editForm.$submitted) && editForm.token.$invalid">
-                        <span ng-show="editForm.token.$error.required">Token is required.</span>
+                        <span ng-show="editForm.token.$error.required">{{(templateTrafficSourceObj && templateTrafficSourceObj.apiParams) ? templateTrafficSourceObj.apiParams.token : ''}} is required.</span>
                     </span>
                 </div>
             </div>
+            <div class="form-group" ng-show="templateTrafficSourceObj.apiMode !== 1 && templateTrafficSourceObj">
+                <label class="col-sm-3 control-label">{{(templateTrafficSourceObj && templateTrafficSourceObj.apiParams) ? templateTrafficSourceObj.apiParams.account : ''}}<span class="star-icon">*</span>:</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" ng-model="formData.account" ng-required="templateTrafficSourceObj.apiMode == 2 || templateTrafficSourceObj.apiMode == 3" name="account"/>
+                    <span class="text-danger" ng-show="(editForm.account.$touched || editForm.$submitted) && editForm.account.$invalid">
+                        <span ng-show="editForm.account.$error.required">{{(templateTrafficSourceObj && templateTrafficSourceObj.apiParams) ? templateTrafficSourceObj.apiParams.account : ''}} is required.</span>
+                    </span>
+                </div>
+            </div>
+            <div class="form-group" ng-show="templateTrafficSourceObj.apiMode !== 1 && templateTrafficSourceObj">
+                <label class="col-sm-3 control-label">{{(templateTrafficSourceObj && templateTrafficSourceObj.apiParams) ? templateTrafficSourceObj.apiParams.password : ''}}<span class="star-icon">*</span>:</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" ng-model="formData.password" ng-required="templateTrafficSourceObj.apiMode == 2 || templateTrafficSourceObj.apiMode == 3" name="password"/>
+                    <span class="text-danger" ng-show="(editForm.password.$touched || editForm.$submitted) && editForm.password.$invalid">
+                        <span ng-show="editForm.password.$error.required">{{(templateTrafficSourceObj && templateTrafficSourceObj.apiParams) ? templateTrafficSourceObj.apiParams.password : ''}} is required.</span>
+                    </span>
+                </div>
+            </div>
+
+
         </form>
     </md-dialog-content>
     <md-dialog-actions>
