添加task条件，order查询

--- a/Front/src/tpl/ts-report.html
+++ b/Front/src/tpl/ts-report.html
@@ -63,7 +63,7 @@
         </div>
         <md-button
                 class="md-raised md-primary cs-compact cs-add-button blue-btn apply-change-btn"
-                ng-click="load($event)" ng-model="btnName" ng-disabled="disabled"
+                ng-click="load($event)" ng-model="btnName"
                 ng-class="{'apply-btn': applyBtn}"
                 translate
                 ng-disabled="!(thirdPartyTrafficSources && thirdPartyTrafficSources.length > 0 && !taskProgress[thirdPartyTrafficSourceId].progressStatus)"
