--- a/Front/src/tpl/ts-report.html
+++ b/Front/src/tpl/ts-report.html
@@ -11,7 +11,7 @@
         <div class="cs-subform-control">
             <label class="label-name">Mesh Size:</label>
             <md-select class="cs-subform-select" ng-model="meshSizeId">
-                <md-option value="{{meshSize}}" ng-repeat="meshSize in meshSizeArr track by $index">{{meshSize}}</md-option>
+                <md-option value="{{meshSize}}" ng-repeat="meshSize in meshSizeArr">{{meshSize}}</md-option>
             </md-select>
         </div>
 
